KAFKA-17759: Remove usages of Utils.mkSet